// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contained button renders default contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-201 MuiButton-root-175 MuiButton-contained-186 MuiButton-raised-189"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-176"
    >
      Contained
    </span>
  </button>
</div>
`

exports[`contained button renders primary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-230 MuiButton-root-204 MuiButton-contained-215 MuiButton-containedPrimary-216 MuiButton-raised-218 MuiButton-raisedPrimary-219"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-205"
    >
      Contained
    </span>
  </button>
</div>
`

exports[`contained button renders secondary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-259 MuiButton-root-233 MuiButton-contained-244 MuiButton-containedSecondary-246 MuiButton-raised-247 MuiButton-raisedSecondary-249"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-234"
    >
      Contained
    </span>
  </button>
</div>
`

exports[`disabled button renders disabled version 1`] = `
<div>
  <button
    class="MuiButtonBase-root-56 MuiButtonBase-disabled-57 MuiButton-root-30 MuiButton-text-32 MuiButton-flat-35 MuiButton-disabled-50"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label-31"
    >
      Click me!
    </span>
  </button>
</div>
`

exports[`flat button renders default flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-288 MuiButton-root-262 MuiButton-text-264 MuiButton-flat-267"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-263"
    >
      Flat
    </span>
  </button>
</div>
`

exports[`flat button renders primary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-317 MuiButton-root-291 MuiButton-text-293 MuiButton-textPrimary-294 MuiButton-flat-296 MuiButton-flatPrimary-297"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-292"
    >
      Flat
    </span>
  </button>
</div>
`

exports[`flat button renders secondary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-346 MuiButton-root-320 MuiButton-text-322 MuiButton-textSecondary-324 MuiButton-flat-325 MuiButton-flatSecondary-327"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-321"
    >
      Flat
    </span>
  </button>
</div>
`

exports[`outlined button renders default outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-114 MuiButton-root-88 MuiButton-outlined-96"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-89"
    >
      Outlined
    </span>
  </button>
</div>
`

exports[`outlined button renders primary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-143 MuiButton-root-117 MuiButton-outlined-125 MuiButton-outlinedPrimary-126"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-118"
    >
      Outlined
    </span>
  </button>
</div>
`

exports[`outlined button renders secondary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-172 MuiButton-root-146 MuiButton-outlined-154 MuiButton-outlinedSecondary-156"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-147"
    >
      Outlined
    </span>
  </button>
</div>
`
